New Crowdin updates (#317)
* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Galician)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Odia)

* New translations strings.xml (Romanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml 

--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -1,102 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Галерея</string>
-    <string name="nav_albums">Альбоми</string>
-    <string name="searchbar_title"><![CDATA[Пошук фото та відео]]></string>
-    <string name="header_today">Сьогодні</string>
-    <string name="header_yesterday">Вчора</string>
-    <string name="request_permissions">Запит дозволів</string>
-    <string name="filter">Фільтр</string>
-    <string name="filter_recent">Нещодавно</string>
-    <string name="filter_nameAZ">Ім\'я (А-Я)</string>
-    <string name="filter_nameZA">Ім\'я (Я-А)</string>
-    <string name="filter_old">Старі</string>
-    <string name="selected_s">Обрано: %s</string>
-    <string name="trash">Кошик</string>
-    <string name="pause_video">Призупинити відео</string>
-    <string name="play_video">Відтворити відео</string>
-    <string name="favorites">Вибране</string>
-    <string name="no_media_title">Тут нічогісінько</string>
-    <string name="no_media_cd">Не знайдено медіа</string>
-    <string name="empty_trash_title">Кришталево чисто</string>
-    <string name="empty_trash_cd">Кошик порожній</string>
-    <string name="error_title">Щось пішло не так :(</string>
-    <string name="error_cd">Сталася помилка</string>
-    <string name="copy_error">Скопіювати помилку</string>
-    <string name="trash_restore">Відновити</string>
-    <string name="trash_empty">Пусто</string>
-    <string name="trash_delete">Видалити</string>
-    <string name="share">Поділитися</string>
-    <string name="remove_selected">Видалити вибране</string>
-    <string name="remove_all">Видалити все</string>
-    <string name="empty_favorites_title">Немає обраних</string>
-    <string name="label">Етикетка</string>
-    <string name="path">Шлях</string>
+    <string name="app_name">Gallery</string>
+    <string name="nav_albums">Albums</string>
+    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
+    <string name="header_today">Today</string>
+    <string name="header_yesterday">Yesterday</string>
+    <string name="request_permissions">Request permissions</string>
+    <string name="filter">Filter</string>
+    <string name="filter_recent">Recent</string>
+    <string name="filter_nameAZ">Name (A-Z)</string>
+    <string name="filter_nameZA">Name (Z-A)</string>
+    <string name="filter_old">Old</string>
+    <string name="selected_s">Selected %s</string>
+    <string name="trash">Trash</string>
+    <string name="pause_video">Pause video</string>
+    <string name="play_video">Play video</string>
+    <string name="favorites">Favorites</string>
+    <string name="no_media_title">Seems empty here</string>
+    <string name="no_media_cd">No media found</string>
+    <string name="empty_trash_title">Squeaky Clean</string>
+    <string name="empty_trash_cd">Trash is empty</string>
+    <string name="error_title">Something went wrong :(</string>
+    <string name="error_cd">An error occurred</string>
+    <string name="copy_error">Copy error</string>
+    <string name="trash_restore">Restore</string>
+    <string name="trash_empty">Empty</string>
+    <string name="trash_delete">Delete</string>
+    <string name="share">Share</string>
+    <string name="remove_selected">Remove selected</string>
+    <string name="remove_all">Remove all</string>
+    <string name="empty_favorites_title">You have no favorites</string>
+    <string name="label">Label</string>
+    <string name="path">Path</string>
     <string name="iso">" • ISO"</string>
-    <string name="kb">КБ</string>
-    <string name="mb">МБ</string>
-    <string name="gb">ГБ</string>
-    <string name="metadata">Метадані</string>
-    <string name="select_all">Вибрати все</string>
-    <string name="unselect_all">Видалити вибір</string>
-    <string name="drop_down_cd">Згорнути</string>
-    <string name="back_cd">Назад</string>
-    <string name="settings_title">Опції</string>
-    <string name="settings_general">Загальне</string>
-    <string name="settings_trash_title">Використовувати кошик</string>
-    <string name="settings_trash_summary">Зберігати дистанційні засоби протягом 30 днів. \nУ разі відключення медіафайли негайно буде видалено.</string>
-    <string name="move_album_to_trash">Надішліть альбом в кошик</string>
-    <string name="pinned_albums_title">Закріплені Альбоми</string>
-    <string name="unpin">Вимкніть</string>
-    <string name="pin">Застосувати</string>
-    <string name="nav_timeline">Хронологія</string>
-    <string name="location_cd">Локація Медіа</string>
+    <string name="kb">KB</string>
+    <string name="mb">MB</string>
+    <string name="gb">GB</string>
+    <string name="metadata">Metadata</string>
+    <string name="select_all">Select all</string>
+    <string name="unselect_all">Unselect all</string>
+    <string name="drop_down_cd">Drop down</string>
+    <string name="back_cd">Back</string>
+    <string name="settings_title">Settings</string>
+    <string name="settings_general">General</string>
+    <string name="settings_trash_title">Use trash can</string>
+    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
+    <string name="move_album_to_trash">Move album to trash</string>
+    <string name="pinned_albums_title">Pinned Albums</string>
+    <string name="unpin">Unpin</string>
+    <string name="pin">Pin</string>
+    <string name="nav_timeline">Timeline</string>
+    <string name="location_cd">Media Location</string>
     <string name="location_map_cd">Location Map</string>
-    <string name="app_dev">від %s</string>
+    <string name="app_dev">by %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Пожертвувати</string>
-    <string name="github">GitHub</string>
-    <string name="donate_button_cd">Кнопка донорації</string>
-    <string name="github_button_cd">Кнопка GitHub</string>
+    <string name="donate">Donate</string>
+    <string name="github">Github</string>
+    <string name="donate_button_cd">Donate Button</string>
+    <string name="github_button_cd">Github Button</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="use_as">Використовуйте як</string>
-    <string name="set_as">"Встановити як: "</string>
-    <string name="action_cancel">Скасувати</string>
-    <string name="action_confirm">Підтвердити</string>
-    <string name="action_confirmed">Підтверджено</string>
-    <string name="history_recent_title">Останні новини</string>
-    <string name="history_suggestions_title">Пропозиції</string>
-    <string name="no_media_found">Немає медичних файлів</string>
-    <string name="image_add_description">Додати опис</string>
-    <string name="edit_cd">увійти</string>
-    <string name="settings_theme_header">Головна</string>
-    <string name="settings_follow_system_theme_title">Як працює система</string>
-    <string name="settings_dark_mode_title">Використовуйте темну тему</string>
-    <string name="selection_dialog_close_cd">Закрити вікно вибору</string>
-    <string name="edit">Увійти</string>
-    <string name="trash_deletion_warning">Знімки і відео, які ви перенесли в кошик, будуть повністю видалені протягом 30 днів.</string>
-    <string name="open_with">Відправити</string>
-    <string name="select">Вибрати</string>
-    <string name="photos_and_videos">Фото та відео</string>
-    <string name="photos">Фото</string>
-    <string name="videos">Відео</string>
-    <string name="photo">Фото</string>
-    <string name="video">Відео</string>
-    <string name="close">Закрити</string>
+    <string name="use_as">Use as</string>
+    <string name="set_as">"Set as: "</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_confirm">Confirm</string>
+    <string name="action_confirmed">Confirmed</string>
+    <string name="history_recent_title">Recent</string>
+    <string name="history_suggestions_title">Suggestions</string>
+    <string name="no_media_found">No media found</string>
+    <string name="image_add_description">Add a description</string>
+    <string name="edit_cd">edit</string>
+    <string name="settings_theme_header">Theme</string>
+    <string name="settings_follow_system_theme_title">Follow System Theme</string>
+    <string name="settings_dark_mode_title">Use Dark Mode</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Edit</string>
+    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
+    <string name="open_with">Open with</string>
+    <string name="select">Select</string>
+    <string name="photos_and_videos">Photos and Videos</string>
+    <string name="photos">Photos</string>
+    <string name="videos">Videos</string>
+    <string name="photo">Photo</string>
+    <string name="video">Video</string>
+    <string name="close">Close</string>
     <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">Дана опція дозволяє додатково валідувати діалоги при здійсненні різних дій, таких як додаток до обраних.</string>
-    <string name="skip">Пас</string>
-    <string name="allow">Дозволити</string>
-    <string name="all">Всі</string>
-    <string name="secure_mode_title">Безпечний режим</string>
-    <string name="secure_mode_summary">Задає вміст при виході</string>
+    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
+    <string name="skip">Skip</string>
+    <string name="allow">Allow</string>
+    <string name="all">All</string>
+    <string name="secure_mode_title">Secure Mode</string>
+    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
     <string name="rotate_screen_cd">Rotate Screen</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Зміна розміру листівок</string>
-    <string name="reset">Зберегти</string>
-    <string name="customization">Персонал</string>
-    <string name="album_card_size_title">Розмір карт альбому</string>
+    <string name="change_album_size">Change Album Card Size</string>
+    <string name="reset">Reset</string>
+    <string name="customization">Customization</string>
+    <string name="album_card_size_title">Album Card Size</string>
     <string name="album_card_size_summary">Manually pick your album card size</string>
     <string name="set_wallpaper">Wallpaper</string>
     <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
@@ -175,10 +175,10 @@
     <string name="toggle_audio_cd">Toggle audio</string>
     <string name="auto">Auto</string>
     <string name="change_playback_speed_cd">Change playback speed</string>
-    <string name="location_new_album">Позиція: Внутрішній репозиторій/%1$s</string>
-    <string name="permission_manage_files_title">Манаг всі файли</string>
-    <string name="permission_manage_files_summary">"Дозволяє програмі створювати, змінювати та видаляти файли та альбоми, які заборонені попередньою системою. (Включає альбоми за межами зображень і DCIM і SD-карт)"</string>
-    <string name="allow_to_manage_files">Дозволити всі файли</string>
+    <string name="location_new_album">Location: Internal-Storage/%1$s</string>
+    <string name="permission_manage_files_title">Manage All Files</string>
+    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
+    <string name="allow_to_manage_files">Allow to Manage All Files</string>
     <string name="vault">Vault</string>
     <string name="tools">Tools</string>
     <string name="library">Library</string>
