--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Galerie</string>
     <string name="nav_albums">Alba</string>
-    <string name="searchbar_title"><![CDATA[Hledat fotky & videa]]></string>
+    <string name="searchbar_title"><![CDATA[Hledat fotky a videa]]></string>
     <string name="header_today">Dnes</string>
     <string name="header_yesterday">Včera</string>
     <string name="request_permissions">Požádat o oprávnění</string>
@@ -102,22 +102,22 @@
     <string name="set_wallpaper_error">Nelze nastavit jako pozadí, není k dispozici žádná aplikace!</string>
     <string name="monthly_timeline_title">Měsíční časová osa</string>
     <string name="monthly_timeline_summary">Seskupit časovou osu měsíčně místo podle data (restartuje aplikaci)</string>
-    <string name="amoled_mode_title">Použít Amoled režim</string>
-    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
+    <string name="amoled_mode_title">Použít režim Amoled</string>
+    <string name="amoled_mode_summary">Vyšší kontrast, vhodné pro Amoled obrazovky</string>
     <string name="location_chip">Poloha: %s</string>
     <string name="media_details">Podrobnosti</string>
     <string name="album_card_size">Velikost karty alba</string>
     <string name="edit_metadata">Upravit Metadata</string>
     <string name="dialog_to_trash">Přesouvání do koše</string>
-    <string name="dialog_delete">Deleting Permanently</string>
-    <string name="s_items">%1$s items</string>
-    <string name="trashing_items">Trashing %1$s items..</string>
-    <string name="deleting_items">Deleting %1$s items...</string>
-    <string name="long_press_to_remove">Long press to remove</string>
+    <string name="dialog_delete">Trvalé mazání</string>
+    <string name="s_items">%1$s položek</string>
+    <string name="trashing_items">Vyhazování %1$s položek...</string>
+    <string name="deleting_items">Mazání %1$s položky...</string>
+    <string name="long_press_to_remove">Dlouhým stiskem odeberete</string>
     <string name="dialog_from_trash">Obnovování z koše</string>
     <string name="restoring_items">Obnovování %1$s položek..</string>
     <string name="trash_incompatible_title">Některé položky nelze vyhodit!</string>
-    <string name="trash_incompatible_summary">Such items will be deleted permanently instead.</string>
+    <string name="trash_incompatible_summary">Takové položky budou trvale smazány.</string>
     <string name="error_toast">Došlo k chybě!</string>
     <string name="beta">Beta</string>
     <string name="remove_metadata">Odstranit metadata</string>
@@ -126,40 +126,139 @@
     <string name="move_to_another_album">Přesunout do jiného albumu</string>
     <string name="move">Přesunout</string>
     <string name="some_permissions_are_not_granted">Některá oprávnění nejsou udělena!</string>
-    <string name="get_started">Get Started</string>
+    <string name="get_started">Začít</string>
     <string name="welcome">Vítejte</string>
-    <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
-    <string name="required">Požadované</string>
-    <string name="optional">Volitelný</string>
-    <string name="permission_manage_media_title">Manage Media</string>
-    <string name="permission_manage_media_summary">"Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
-    <string name="read_media_images">Read Media Images</string>
+    <string name="setup_summary">Pro přístup k médiím je nutné udělit následující oprávnění:</string>
+    <string name="required">Vyžadované</string>
+    <string name="optional">Volitelné</string>
+    <string name="permission_manage_media_title">Správa médií</string>
+    <string name="permission_manage_media_summary">"Automaticky poskytuje systémová potvrzovací dialogová okna, když požadujete několik změn v médiích (přepínání oblíbených položek, správa koše, úprava metadat atd.)"</string>
+    <string name="read_media_images">Číst obrázky</string>
     <string name="read_media_images_summary">Umožňuje aplikaci zobrazit vaše obrázky</string>
-    <string name="read_media_videos">Read Media Videos</string>
-    <string name="read_media_videos_summary">Allows the app to show your videos</string>
+    <string name="read_media_videos">Číst videa</string>
+    <string name="read_media_videos_summary">Umožňuje aplikaci zobrazit vaše videa</string>
     <string name="access_media_location">Přístup k umístění médií</string>
-    <string name="access_media_location_summary"><![CDATA[Umožňuje aplikaci číst údaje o poloze vašich snímků & videí]]></string>
+    <string name="access_media_location_summary"><![CDATA[Umožňuje aplikaci číst údaje o poloze vašich snímků a videí]]></string>
     <string name="internet">Internet</string>
-    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
-    <string name="fancy_blur">Fancy Blur</string>
-    <string name="fancy_blur_summary">Blur background in Media View</string>
-    <string name="old_navbar">Use Material Navigation</string>
-    <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
+    <string name="internet_summary"><![CDATA[Vyžadováno pro zobrazení náhledů umístění pro vaše obrázky a videa]]></string>
+    <string name="fancy_blur">Rozostření pozadí</string>
+    <string name="fancy_blur_summary">Rozostřit pozadí v zobrazování médií</string>
+    <string name="old_navbar">Použít navigaci v Material Designu</string>
+    <string name="old_navbar_summary">Zobrazí staré rozhraní navigační lišty (s lištami pro větší obrazovky)</string>
     <string name="hide_timeline_for_albums">Skrýt časovou osu pro alba</string>
-    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
+    <string name="hide_timeline_for_album_summary">Skryje záhlaví s datem při otevírání alba</string>
     <string name="allow_vibrations">Povolit vibrace</string>
-    <string name="allow_vibrations_summary">Allow sending feedback as vibrations while performing some actions or gestures</string>
+    <string name="allow_vibrations_summary">Umožnit zpětnou vazbu ve formě vibrací při provádění některých akcí nebo gest</string>
     <string name="album_name">Název alba</string>
     <string name="create_new_album">Vytvořit nové album</string>
     <string name="copy">Kopírovat</string>
-    <string name="ignored_albums">Ignorovaná Alba</string>
+    <string name="ignored_albums">Ignorovaná alba</string>
     <string name="select_an_album">Vybrat album</string>
-    <string name="blacklist_summary">Ignore albums from Gallery</string>
+    <string name="blacklist_summary">Ignorovat alba z galerie</string>
     <string name="add_to_ignored">Přidat do ignorovaných albumů</string>
-    <string name="add_to_ignored_summary">Remove an album from showing inside the Gallery</string>
+    <string name="add_to_ignored_summary">Přestat zobrazovat album v galerii</string>
     <string name="remove_from_ignored">Odebrat ze seznamu ignorovaných</string>
-    <string name="remove_from_ignored_summary">Remove from the ignored list the album named %1$s</string>
-    <string name="favorite">Favorite</string>
+    <string name="remove_from_ignored_summary">Odstranit album %1$s ze seznamu ignorovaných</string>
+    <string name="override">Přepsat</string>
+    <string name="save_copy">Uložit kopii</string>
+    <string name="favorite">Oblíbené</string>
+    <string name="allow_to_manage_media">Povolit správu médií</string>
+    <string name="set_default_launch_screen">Nastavit výchozí obrazovku po spuštění</string>
+    <string name="use_last_opened_screen">Použít naposledy otevřenou obrazovku</string>
+    <string name="timeline">Časová osa</string>
+    <string name="albums">Alba</string>
+    <string name="launch_on_timeline">Spustit na časové ose</string>
+    <string name="launch_on_albums">Spustit na zobrazení alb</string>
+    <string name="launch_auto">Spustit naposledy otevřenou obrazovku</string>
+    <string name="set_default_screen">Nastavit výchozí obrazovku</string>
+    <string name="done">Hotovo</string>
+    <string name="toggle_audio_cd">Přepnout zvuk</string>
+    <string name="auto">Automatické</string>
+    <string name="change_playback_speed_cd">Změnit rychlost přehrávání</string>
+    <string name="location_new_album">Umístění: interní úložiště/%1$s</string>
+    <string name="permission_manage_files_title">Správa všech souborů</string>
+    <string name="permission_manage_files_summary">"Umožní aplikaci vytvářet, upravovat a mazat soubory a alba, která byla dříve omezena systémem. (Zahrnuje alba mimo složky Pictures a DCIM a mimo složky na SD kartě)"</string>
+    <string name="allow_to_manage_files">Povolit správu všech souborů</string>
+    <string name="vault">Vault</string>
+    <string name="tools">Tools</string>
+    <string name="library">Library</string>
+    <string name="biometric_authentication">Biometric Authentication</string>
+    <string name="unlock_your_vault">Unlock your Vault</string>
+    <string name="add_media_to_vault_cd">Add Media to Vault</string>
+    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
+    <string name="granted">Granted</string>
+    <string name="new_vault">New Vault</string>
+    <string name="delete_vault">Delete Vault</string>
+    <string name="unknown_vault">Unknown Vault</string>
+    <string name="hide">Hide</string>
+    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
+    <string name="no_ignored_albums">No ignored albums</string>
+    <string name="setup_ignored_albums">Setup ignored albums</string>
+    <string name="individual_album_selection">Individual Album Selection</string>
+    <string name="wildcard_creator">Wildcard Creator</string>
+    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
+    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
+    <string name="matched_albums">"Matched albums: %1$s"</string>
+    <string name="go_back">Go back</string>
+    <string name="continue_string">Continue</string>
+    <string name="apply">Apply</string>
+    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="setup_label_input">Label</string>
+    <string name="setup_label_placeholder">Set your label</string>
+    <string name="setup_label_title">Ignored Albums</string>
+    <string name="setup_lavel_subtitle">Create</string>
+    <string name="setup_location_title">Options</string>
+    <string name="setup_location_subtitle">Where and who’s ignored</string>
+    <string name="setup_location_location_title">Where should be ignored</string>
+    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_location_options_albums">Albums</string>
+    <string name="setup_location_options_timeline">Timeline</string>
+    <string name="setup_location_options_both">Both</string>
+    <string name="setup_location_type_title">Who should be ignored</string>
+    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
+    <string name="setup_location_types_selection">Selection</string>
+    <string name="setup_location_types_regex">Regex Pattern</string>
+    <string name="setup_type_selection_title">Selection</string>
+    <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
+    <string name="setup_type_selection_add_album">Add album</string>
+    <string name="setup_type_selection_pick_album">Pick an album</string>
+    <string name="setup_type_regex_label">Regex Pattern</string>
+    <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
+    <string name="setup_type_regex_title">Regex Pattern</string>
+    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
+    <string name="setup_type_regex_example_title">Examples</string>
+    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
+    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
+    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
+    <string name="setup_confirmation_title">Confirmation</string>
+    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
+    <string name="setup_confirmation_where">Where should be ignored</string>
+    <string name="setup_confirmation_who">Who should be ignored</string>
+    <string name="setup_confirmation_matched">Matched Albums</string>
+    <string name="albums_and_timeline">Both Albums and Timeline</string>
+    <string name="created">Created</string>
+    <string name="filter_type_date">Date</string>
+    <string name="filter_type_name">Name</string>
+    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
+    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
+    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
+    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
+    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="navigation">Navigation</string>
+    <string name="vault_setup_title">Setup your vault</string>
+    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
+    <string name="vault_setup_name">Vault Name</string>
+    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
+    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
+    <string name="ignored">Ignored</string>
+    <string name="location">Location</string>
+    <string name="update_file_name">Update file name</string>
     <plurals name="item_count">
         <item quantity="one">%s položka</item>
         <item quantity="few">%s položky</item>
