--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Galerie</string>
+    <string name="app_name">Galerie d\'images</string>
     <string name="nav_albums">Albums</string>
     <string name="searchbar_title"><![CDATA[Rechercher des photos et vidéos]]></string>
     <string name="header_today">Aujourd\'hui</string>
@@ -11,7 +11,7 @@
     <string name="filter_nameAZ">Nom (A-Z)</string>
     <string name="filter_nameZA">Nom (Z-A)</string>
     <string name="filter_old">Ancien</string>
-    <string name="selected_s">%s Sélectionné(s)</string>
+    <string name="selected_s">Selectionné : %s</string>
     <string name="trash">Corbeille</string>
     <string name="pause_video">Mettre en pause</string>
     <string name="play_video">Lire la vidéo</string>
@@ -84,7 +84,7 @@
     <string name="photo">Photo</string>
     <string name="video">Vidéo</string>
     <string name="close">Fermer</string>
-    <string name="manage_media_title">Permettre à Gallery de gérer vos médias</string>
+    <string name="manage_media_title">Permettre à Gallerie de gérer vos médias</string>
     <string name="manage_media_summary">Ce paramètre permet d\'ignorer toute boîte de dialogue de confirmation supplémentaire lors de l\'exécution de diverses actions telles que le marquage en tant que favori.</string>
     <string name="skip">Ignorer</string>
     <string name="allow">Autoriser</string>
@@ -128,15 +128,15 @@
     <string name="some_permissions_are_not_granted">Certaines autorisations ne sont pas accordées !</string>
     <string name="get_started">Démarrer</string>
     <string name="welcome">Bienvenue</string>
-    <string name="setup_summary">Pour pouvoir accéder à vos médias, vous devez donner les autorisations suivantes :</string>
+    <string name="setup_summary">Pour pouvoir accéder à vos médias, vous devez accorder les autorisations suivantes :</string>
     <string name="required">Requis</string>
     <string name="optional">Optionnel</string>
     <string name="permission_manage_media_title">Gérer les médias</string>
     <string name="permission_manage_media_summary">"Accepter automatiquement les confirmations du système quand vous modifiez vos médias (mettre en favori, gérer la corbeille, modifier les métadonnées, etc.)"</string>
     <string name="read_media_images">Lire les images</string>
-    <string name="read_media_images_summary">Permet à l\'application de monter vos images</string>
+    <string name="read_media_images_summary">Permet à l\'application d\'afficher vos images</string>
     <string name="read_media_videos">Lire les vidéos</string>
-    <string name="read_media_videos_summary">Permet à l\'application de monter vos vidéos</string>
+    <string name="read_media_videos_summary">Permet à l\'application d\'afficher vos vidéos</string>
     <string name="access_media_location">Lire la localisation des médias</string>
     <string name="access_media_location_summary"><![CDATA[Permet à l\'application de lire les données de localisation de vos images et vidéos]]></string>
     <string name="internet">Internet</string>
@@ -159,7 +159,106 @@
     <string name="add_to_ignored_summary">Supprimer l\'affichage d\'un album dans la galerie</string>
     <string name="remove_from_ignored">Supprimer de la liste d\'albums ignorés</string>
     <string name="remove_from_ignored_summary">Retirer l\'album nommé %1$s des albums ignorés</string>
-    <string name="favorite">Favorite</string>
+    <string name="override">Annulation</string>
+    <string name="save_copy">Enregistrer la copie</string>
+    <string name="favorite">Favoris</string>
+    <string name="allow_to_manage_media">Autoriser la gestion des médias</string>
+    <string name="set_default_launch_screen">Définir l\'écran de lancement par défaut</string>
+    <string name="use_last_opened_screen">Utiliser le dernier onglet ouvert</string>
+    <string name="timeline">Chronologie</string>
+    <string name="albums">Albums</string>
+    <string name="launch_on_timeline">Démarrer sur la chronologie</string>
+    <string name="launch_on_albums">Démarrer sur les albums</string>
+    <string name="launch_auto">Démarrer avec le dernier écran lorsque l\'application a été fermée</string>
+    <string name="set_default_screen">Définir l\'écran par défaut</string>
+    <string name="done">Terminé</string>
+    <string name="toggle_audio_cd">Basculer l\'audio</string>
+    <string name="auto">Automatique</string>
+    <string name="change_playback_speed_cd">Modifier la vitesse de lecture</string>
+    <string name="location_new_album">Destination : stockage interne/%1$s</string>
+    <string name="permission_manage_files_title">Gérer tous les fichiers</string>
+    <string name="permission_manage_files_summary">"Permet à l'application de créer, modifier et supprimer des fichiers et des albums qui étaient auparavant restreints par le système. (Inclut les albums en dehors des dossiers Images et DCIM et ceux de la carte SD"</string>
+    <string name="allow_to_manage_files">Autoriser la gestion de tous les fichiers</string>
+    <string name="vault">Vault</string>
+    <string name="tools">Tools</string>
+    <string name="library">Library</string>
+    <string name="biometric_authentication">Biometric Authentication</string>
+    <string name="unlock_your_vault">Unlock your Vault</string>
+    <string name="add_media_to_vault_cd">Add Media to Vault</string>
+    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
+    <string name="granted">Granted</string>
+    <string name="new_vault">New Vault</string>
+    <string name="delete_vault">Delete Vault</string>
+    <string name="unknown_vault">Unknown Vault</string>
+    <string name="hide">Hide</string>
+    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
+    <string name="no_ignored_albums">No ignored albums</string>
+    <string name="setup_ignored_albums">Setup ignored albums</string>
+    <string name="individual_album_selection">Individual Album Selection</string>
+    <string name="wildcard_creator">Wildcard Creator</string>
+    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
+    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
+    <string name="matched_albums">"Matched albums: %1$s"</string>
+    <string name="go_back">Go back</string>
+    <string name="continue_string">Continue</string>
+    <string name="apply">Apply</string>
+    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="setup_label_input">Label</string>
+    <string name="setup_label_placeholder">Set your label</string>
+    <string name="setup_label_title">Ignored Albums</string>
+    <string name="setup_lavel_subtitle">Create</string>
+    <string name="setup_location_title">Options</string>
+    <string name="setup_location_subtitle">Where and who’s ignored</string>
+    <string name="setup_location_location_title">Where should be ignored</string>
+    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_location_options_albums">Albums</string>
+    <string name="setup_location_options_timeline">Timeline</string>
+    <string name="setup_location_options_both">Both</string>
+    <string name="setup_location_type_title">Who should be ignored</string>
+    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
+    <string name="setup_location_types_selection">Selection</string>
+    <string name="setup_location_types_regex">Regex Pattern</string>
+    <string name="setup_type_selection_title">Selection</string>
+    <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
+    <string name="setup_type_selection_add_album">Add album</string>
+    <string name="setup_type_selection_pick_album">Pick an album</string>
+    <string name="setup_type_regex_label">Regex Pattern</string>
+    <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
+    <string name="setup_type_regex_title">Regex Pattern</string>
+    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
+    <string name="setup_type_regex_example_title">Examples</string>
+    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
+    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
+    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
+    <string name="setup_confirmation_title">Confirmation</string>
+    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
+    <string name="setup_confirmation_where">Where should be ignored</string>
+    <string name="setup_confirmation_who">Who should be ignored</string>
+    <string name="setup_confirmation_matched">Matched Albums</string>
+    <string name="albums_and_timeline">Both Albums and Timeline</string>
+    <string name="created">Created</string>
+    <string name="filter_type_date">Date</string>
+    <string name="filter_type_name">Name</string>
+    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
+    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
+    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
+    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
+    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="navigation">Navigation</string>
+    <string name="vault_setup_title">Setup your vault</string>
+    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
+    <string name="vault_setup_name">Vault Name</string>
+    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
+    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
+    <string name="ignored">Ignored</string>
+    <string name="location">Location</string>
+    <string name="update_file_name">Update file name</string>
     <plurals name="item_count">
         <item quantity="one">%s élément</item>
         <item quantity="other">%s éléments</item>
