--- a/app/src/main/res/values-nn-rNO/strings.xml
+++ b/app/src/main/res/values-nn-rNO/strings.xml
@@ -1,107 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Галерея</string>
-    <string name="nav_albums">Альбоми</string>
-    <string name="searchbar_title"><![CDATA[Пошук фото та відео]]></string>
-    <string name="header_today">Сьогодні</string>
-    <string name="header_yesterday">Вчора</string>
-    <string name="request_permissions">Запит дозволів</string>
-    <string name="filter">Фільтр</string>
-    <string name="filter_recent">Нещодавно</string>
-    <string name="filter_nameAZ">Ім\'я (А-Я)</string>
-    <string name="filter_nameZA">Ім\'я (Я-А)</string>
-    <string name="filter_old">Старі</string>
-    <string name="selected_s">Обрано: %s</string>
-    <string name="trash">Кошик</string>
-    <string name="pause_video">Призупинити відео</string>
-    <string name="play_video">Відтворити відео</string>
-    <string name="favorites">Вибране</string>
-    <string name="no_media_title">Тут нічогісінько</string>
-    <string name="no_media_cd">Не знайдено медіа</string>
-    <string name="empty_trash_title">Кришталево чисто</string>
-    <string name="empty_trash_cd">Кошик порожній</string>
-    <string name="error_title">Щось пішло не так :(</string>
-    <string name="error_cd">Сталася помилка</string>
-    <string name="copy_error">Скопіювати помилку</string>
-    <string name="trash_restore">Відновити</string>
-    <string name="trash_empty">Пусто</string>
-    <string name="trash_delete">Видалити</string>
-    <string name="share">Поділитися</string>
-    <string name="remove_selected">Видалити вибране</string>
-    <string name="remove_all">Видалити все</string>
-    <string name="empty_favorites_title">Немає обраних</string>
-    <string name="label">Етикетка</string>
-    <string name="path">Шлях</string>
+    <string name="app_name">Gallery</string>
+    <string name="nav_albums">Album</string>
+    <string name="searchbar_title"><![CDATA[Søk etter bilete og videoar]]></string>
+    <string name="header_today">I dag</string>
+    <string name="header_yesterday">I går</string>
+    <string name="request_permissions">Be om løyve</string>
+    <string name="filter">Filter</string>
+    <string name="filter_recent">Nylege</string>
+    <string name="filter_nameAZ">Namn (A–Å)</string>
+    <string name="filter_nameZA">Namn (Å–A)</string>
+    <string name="filter_old">Eldste</string>
+    <string name="selected_s">%s merkt</string>
+    <string name="trash">Papirkorg</string>
+    <string name="pause_video">Set video på pause</string>
+    <string name="play_video">Spel av video</string>
+    <string name="favorites">Favorittar</string>
+    <string name="no_media_title">Det er tomt her</string>
+    <string name="no_media_cd">Fann ikkje nokon medium</string>
+    <string name="empty_trash_title">Papirkorga er tom</string>
+    <string name="empty_trash_cd">Papirkorga er tom</string>
+    <string name="error_title">Noko gjekk gale</string>
+    <string name="error_cd">Det oppstod ein feil</string>
+    <string name="copy_error">Feil ved kopiering</string>
+    <string name="trash_restore">Gjenopprett</string>
+    <string name="trash_empty">Tøm</string>
+    <string name="trash_delete">Slett</string>
+    <string name="share">Del</string>
+    <string name="remove_selected">Remove selected</string>
+    <string name="remove_all">Slett alle</string>
+    <string name="empty_favorites_title">Du har ingen favorittar</string>
+    <string name="label">Etikett</string>
+    <string name="path">Sti</string>
     <string name="iso">" • ISO"</string>
-    <string name="kb">КБ</string>
-    <string name="mb">МБ</string>
-    <string name="gb">ГБ</string>
-    <string name="metadata">Метадані</string>
-    <string name="select_all">Вибрати все</string>
-    <string name="unselect_all">Видалити вибір</string>
-    <string name="drop_down_cd">Згорнути</string>
-    <string name="back_cd">Назад</string>
-    <string name="settings_title">Опції</string>
-    <string name="settings_general">Загальне</string>
-    <string name="settings_trash_title">Використовувати кошик</string>
-    <string name="settings_trash_summary">Зберігати дистанційні засоби протягом 30 днів. \nУ разі відключення медіафайли негайно буде видалено.</string>
-    <string name="move_album_to_trash">Надішліть альбом в кошик</string>
-    <string name="pinned_albums_title">Закріплені Альбоми</string>
-    <string name="unpin">Вимкніть</string>
-    <string name="pin">Застосувати</string>
-    <string name="nav_timeline">Хронологія</string>
-    <string name="location_cd">Локація Медіа</string>
+    <string name="kb">KB</string>
+    <string name="mb">MB</string>
+    <string name="gb">GB</string>
+    <string name="metadata">Metadata</string>
+    <string name="select_all">Merk alle</string>
+    <string name="unselect_all">Fjern merking</string>
+    <string name="drop_down_cd">Drop down</string>
+    <string name="back_cd">Tilbake</string>
+    <string name="settings_title">Innstillingar</string>
+    <string name="settings_general">Generelt</string>
+    <string name="settings_trash_title">Bruk papirkorga</string>
+    <string name="settings_trash_summary">Lagrar sletta medium i 30 dagar.\nViss dette valet er slått av, vert medium sletta permanent.</string>
+    <string name="move_album_to_trash">Flytt albumet til papirkorga</string>
+    <string name="pinned_albums_title">Festa album</string>
+    <string name="unpin">Løys</string>
+    <string name="pin">Fest</string>
+    <string name="nav_timeline">Tidslinje</string>
+    <string name="location_cd">Media Location</string>
     <string name="location_map_cd">Location Map</string>
-    <string name="app_dev">від %s</string>
+    <string name="app_dev">er laga av %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Пожертвувати</string>
-    <string name="github">GitHub</string>
-    <string name="donate_button_cd">Кнопка донорації</string>
-    <string name="github_button_cd">Кнопка GitHub</string>
+    <string name="donate">Doner</string>
+    <string name="github">Github</string>
+    <string name="donate_button_cd">Donate Button</string>
+    <string name="github_button_cd">Github Button</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="use_as">Використовуйте як</string>
-    <string name="set_as">"Встановити як: "</string>
-    <string name="action_cancel">Скасувати</string>
-    <string name="action_confirm">Підтвердити</string>
-    <string name="action_confirmed">Підтверджено</string>
-    <string name="history_recent_title">Останні новини</string>
-    <string name="history_suggestions_title">Пропозиції</string>
-    <string name="no_media_found">Немає медичних файлів</string>
-    <string name="image_add_description">Додати опис</string>
-    <string name="edit_cd">увійти</string>
-    <string name="settings_theme_header">Головна</string>
-    <string name="settings_follow_system_theme_title">Як працює система</string>
-    <string name="settings_dark_mode_title">Використовуйте темну тему</string>
-    <string name="selection_dialog_close_cd">Закрити вікно вибору</string>
-    <string name="edit">Увійти</string>
-    <string name="trash_deletion_warning">Знімки і відео, які ви перенесли в кошик, будуть повністю видалені протягом 30 днів.</string>
-    <string name="open_with">Відправити</string>
-    <string name="select">Вибрати</string>
-    <string name="photos_and_videos">Фото та відео</string>
-    <string name="photos">Фото</string>
-    <string name="videos">Відео</string>
-    <string name="photo">Фото</string>
-    <string name="video">Відео</string>
-    <string name="close">Закрити</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">Дана опція дозволяє додатково валідувати діалоги при здійсненні різних дій, таких як додаток до обраних.</string>
-    <string name="skip">Пас</string>
-    <string name="allow">Дозволити</string>
-    <string name="all">Всі</string>
-    <string name="secure_mode_title">Безпечний режим</string>
-    <string name="secure_mode_summary">Задає вміст при виході</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="use_as">Bruk som</string>
+    <string name="set_as">"Set as: "</string>
+    <string name="action_cancel">Avbryt</string>
+    <string name="action_confirm">Stadfest</string>
+    <string name="action_confirmed">Stadfesta</string>
+    <string name="history_recent_title">Nylege</string>
+    <string name="history_suggestions_title">Forslag</string>
+    <string name="no_media_found">Fann ikkje nokon medium</string>
+    <string name="image_add_description">Legg til ei skildring</string>
+    <string name="edit_cd">rediger</string>
+    <string name="settings_theme_header">Tema</string>
+    <string name="settings_follow_system_theme_title">Følg systemtemaet</string>
+    <string name="settings_dark_mode_title">Bruk mørk modus</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Rediger</string>
+    <string name="trash_deletion_warning">Bilete og videoar som du slettar, vert fjerna etter 30 dagar.</string>
+    <string name="open_with">Opna med</string>
+    <string name="select">Vel</string>
+    <string name="photos_and_videos">Bilete og videoar</string>
+    <string name="photos">Bilete</string>
+    <string name="videos">Videoar</string>
+    <string name="photo">Bilete</string>
+    <string name="video">Video</string>
+    <string name="close">Lukk</string>
+    <string name="manage_media_title">Gje Gallery løyve til å handsame medium</string>
+    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
+    <string name="skip">Hopp over</string>
+    <string name="allow">Tillat</string>
+    <string name="all">All</string>
+    <string name="secure_mode_title">Sikkermodus</string>
+    <string name="secure_mode_summary">Ikkje førehandsvis appvindauget når appen er lukka</string>
+    <string name="rotate_screen_cd">Roter skjermen</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Зміна розміру листівок</string>
-    <string name="reset">Зберегти</string>
-    <string name="customization">Персонал</string>
-    <string name="album_card_size_title">Розмір карт альбому</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
+    <string name="change_album_size">Endra storleik på omslag</string>
+    <string name="reset">Tilbakestill</string>
+    <string name="customization">Tilpassing</string>
+    <string name="album_card_size_title">Storleik på albumomslag</string>
+    <string name="album_card_size_summary">Tilpass storleiken på albumomslag</string>
+    <string name="set_wallpaper">Bakgrunnsbilete</string>
+    <string name="set_wallpaper_error">Klarte ikkje bruka som bakgrunnsbilete: ingen tilgjengelege appar.</string>
+    <string name="monthly_timeline_title">Månadleg tidslinje</string>
+    <string name="monthly_timeline_summary">Grupper tidslinja etter månad i staden for dato (tek omstart av appen)</string>
     <string name="amoled_mode_title">Use Amoled Mode</string>
     <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
     <string name="location_chip">Location: %s</string>
@@ -113,7 +113,7 @@
     <string name="s_items">%1$s items</string>
     <string name="trashing_items">Trashing %1$s items..</string>
     <string name="deleting_items">Deleting %1$s items...</string>
-    <string name="long_press_to_remove">Long press to remove</string>
+    <string name="long_press_to_remove">Trykk lenge for å fjerna</string>
     <string name="dialog_from_trash">Restoring from Trash</string>
     <string name="restoring_items">Restoring %1$s items..</string>
     <string name="trash_incompatible_title">Some items cannot be trashed!</string>
@@ -125,22 +125,22 @@
     <string name="description">Description</string>
     <string name="move_to_another_album">Move to another album</string>
     <string name="move">Move</string>
-    <string name="some_permissions_are_not_granted">Some permissions are not granted!</string>
-    <string name="get_started">Get Started</string>
-    <string name="welcome">Welcome</string>
-    <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
-    <string name="required">Required</string>
-    <string name="optional">Optional</string>
-    <string name="permission_manage_media_title">Manage Media</string>
+    <string name="some_permissions_are_not_granted">Nokre tilgangsløyve er ikkje gjevne.</string>
+    <string name="get_started">Kom i gang</string>
+    <string name="welcome">Velkommen</string>
+    <string name="setup_summary">For å få tilgang til medium, er det nødvendig med følgjande løyve:</string>
+    <string name="required">Påkravd</string>
+    <string name="optional">Valfritt</string>
+    <string name="permission_manage_media_title">Handsame medium</string>
     <string name="permission_manage_media_summary">"Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
-    <string name="read_media_images">Read Media Images</string>
-    <string name="read_media_images_summary">Allows the app to show your images</string>
-    <string name="read_media_videos">Read Media Videos</string>
-    <string name="read_media_videos_summary">Allows the app to show your videos</string>
-    <string name="access_media_location">Access Media Location</string>
-    <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
-    <string name="internet">Internet</string>
-    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
+    <string name="read_media_images">Lesetilgang til bilete</string>
+    <string name="read_media_images_summary">Tillèt appen å vise deg bileta dine</string>
+    <string name="read_media_videos">Lesetilgang til videoar</string>
+    <string name="read_media_videos_summary">Tillèt appen å vise deg videoane dine</string>
+    <string name="access_media_location">Tilgang til lokasjonsdata i medium</string>
+    <string name="access_media_location_summary"><![CDATA[Tillèt appen å lese lokasjonsdata frå bileta og videoane dine]]></string>
+    <string name="internet">Internett</string>
+    <string name="internet_summary"><![CDATA[Tillèt appen å førehandsvisa lokasjon frå bileta og videoane dine]]></string>
     <string name="fancy_blur">Fancy Blur</string>
     <string name="fancy_blur_summary">Blur background in Media View</string>
     <string name="old_navbar">Use Material Navigation</string>
@@ -175,10 +175,10 @@
     <string name="toggle_audio_cd">Toggle audio</string>
     <string name="auto">Auto</string>
     <string name="change_playback_speed_cd">Change playback speed</string>
-    <string name="location_new_album">Позиція: Внутрішній репозиторій/%1$s</string>
-    <string name="permission_manage_files_title">Манаг всі файли</string>
-    <string name="permission_manage_files_summary">"Дозволяє програмі створювати, змінювати та видаляти файли та альбоми, які заборонені попередньою системою. (Включає альбоми за межами зображень і DCIM і SD-карт)"</string>
-    <string name="allow_to_manage_files">Дозволити всі файли</string>
+    <string name="location_new_album">Location: Internal-Storage/%1$s</string>
+    <string name="permission_manage_files_title">Manage All Files</string>
+    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
+    <string name="allow_to_manage_files">Allow to Manage All Files</string>
     <string name="vault">Vault</string>
     <string name="tools">Tools</string>
     <string name="library">Library</string>
@@ -261,8 +261,6 @@
     <string name="update_file_name">Update file name</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
-        <item quantity="few">%s items</item>
-        <item quantity="many">%s items</item>
         <item quantity="other">%s items</item>
     </plurals>
 </resources>
