--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -16,7 +16,7 @@
     <string name="pause_video">Wstrzymaj film</string>
     <string name="play_video">Odtwórz film</string>
     <string name="favorites">Ulubione</string>
-    <string name="no_media_title">Wydaje się, że tu pusto masz</string>
+    <string name="no_media_title">Wygląda, że jest tu pusto</string>
     <string name="no_media_cd">Nie znaleziono nośników</string>
     <string name="empty_trash_title">Kompletnie czysty</string>
     <string name="empty_trash_cd">Kosz jest pusty</string>
@@ -44,7 +44,7 @@
     <string name="settings_title">Ustawienia</string>
     <string name="settings_general">Ogólne</string>
     <string name="settings_trash_title">Użyj kosza</string>
-    <string name="settings_trash_summary">Przechowywanie usuniętych nośników przez 30 dni.\nUsunięcie nośnika spowoduje jego trwałą utratę, jeśli jest wyłączony.</string>
+    <string name="settings_trash_summary">Przechowuje usunięte zdjęcia i filmy przez 30 dni.\nUsunięcie ich spowoduje ich trwałą utratę, jeśli jest wyłączony.</string>
     <string name="move_album_to_trash">Przenieś album do kosza</string>
     <string name="pinned_albums_title">Przypięte albumy</string>
     <string name="unpin">Odepnij</string>
@@ -126,28 +126,28 @@
     <string name="move_to_another_album">Przenieś do innego albumu</string>
     <string name="move">Przenieś</string>
     <string name="some_permissions_are_not_granted">Nie przyznano niektórych uprawnień!</string>
-    <string name="get_started">Get Started</string>
+    <string name="get_started">Rozpocznij</string>
     <string name="welcome">Witaj!</string>
     <string name="setup_summary">Aby uzyskać dostęp do multimediów, wymagane jest przyznanie następujących uprawnień:</string>
     <string name="required">Wymagane</string>
     <string name="optional">Opcjonalne</string>
-    <string name="permission_manage_media_title">Manage Media</string>
-    <string name="permission_manage_media_summary">"Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
-    <string name="read_media_images">Read Media Images</string>
-    <string name="read_media_images_summary">Allows the app to show your images</string>
-    <string name="read_media_videos">Read Media Videos</string>
-    <string name="read_media_videos_summary">Allows the app to show your videos</string>
-    <string name="access_media_location">Access Media Location</string>
-    <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
+    <string name="permission_manage_media_title">Zarządzanie multimediami</string>
+    <string name="permission_manage_media_summary">"Automatycznie przyznaje uprawnienia, gdy chcesz wprowadzić zmiany w plikach mediów (przełączanie ulubionych, zarządzanie koszem, edycja metadanych itp.)"</string>
+    <string name="read_media_images">Odczyt zdjęć</string>
+    <string name="read_media_images_summary">Umożliwia aplikacji wyświetlanie zdjęć</string>
+    <string name="read_media_videos">Odczyt filmów</string>
+    <string name="read_media_videos_summary">Umożliwia aplikacji wyświetlanie filmów</string>
+    <string name="access_media_location">Dostęp do lokalizacji zdjęć</string>
+    <string name="access_media_location_summary"><![CDATA[Umożliwia aplikacji odczytywanie danych lokalizacji zdjęć i filmów.]]></string>
     <string name="internet">Internet</string>
-    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
-    <string name="fancy_blur">Fancy Blur</string>
-    <string name="fancy_blur_summary">Blur background in Media View</string>
-    <string name="old_navbar">Use Material Navigation</string>
-    <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
-    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
+    <string name="internet_summary"><![CDATA[Wymagane do wyświetlania podglądu lokalizacji zdjęć i filmów]]></string>
+    <string name="fancy_blur">Efekt rozmycia</string>
+    <string name="fancy_blur_summary">Rozmyj tło w widoku multimediów</string>
+    <string name="old_navbar">Użyj paska nawigacji Material</string>
+    <string name="old_navbar_summary">Pokaż stary pasek nawigacji (dla większych ekranów wyświetla boczny pasek)</string>
+    <string name="hide_timeline_for_albums">Ukryj przedziały dat dla albumów</string>
     <string name="hide_timeline_for_album_summary">Chowa nagłówki dat przy otwieraniu albumu</string>
-    <string name="allow_vibrations">Allow vibrations</string>
+    <string name="allow_vibrations">Zezwól na wibracje</string>
     <string name="allow_vibrations_summary">Zezwalaj na wysyłanie informacji zwrotnych w postaci wibracji podczas wykonywania niektórych czynności lub gestów</string>
     <string name="album_name">Nazwa albumu</string>
     <string name="create_new_album">Stwórz nowy album</string>
@@ -156,10 +156,109 @@
     <string name="select_an_album">Wybierz album</string>
     <string name="blacklist_summary">Wyklucz albumy z Galerii</string>
     <string name="add_to_ignored">Dodaj do wykluczonych albumów</string>
-    <string name="add_to_ignored_summary">Remove an album from showing inside the Gallery</string>
-    <string name="remove_from_ignored">Remove from ignored list</string>
-    <string name="remove_from_ignored_summary">Remove from the ignored list the album named %1$s</string>
-    <string name="favorite">Favorite</string>
+    <string name="add_to_ignored_summary">Nie pokazuj tego albumu w Galerii</string>
+    <string name="remove_from_ignored">Usuń z listy ignorowanych</string>
+    <string name="remove_from_ignored_summary">Usuń z listy ignorowanych album o nazwie %1$s</string>
+    <string name="override">Nadpisz</string>
+    <string name="save_copy">Zapisz kopię</string>
+    <string name="favorite">Ulubione</string>
+    <string name="allow_to_manage_media">Zezwalaj na zarządzanie multimediami</string>
+    <string name="set_default_launch_screen">Domyślny ekran startowy</string>
+    <string name="use_last_opened_screen">Ostatni otwarty</string>
+    <string name="timeline">Oś czasu</string>
+    <string name="albums">Albumy</string>
+    <string name="launch_on_timeline">Otwórz oś czasu</string>
+    <string name="launch_on_albums">Otwórz albumy</string>
+    <string name="launch_auto">Otwórz ostatni ekran używany przed zamknięciem aplikacji</string>
+    <string name="set_default_screen">Ustaw domyślny ekran startowy</string>
+    <string name="done">Gotowe</string>
+    <string name="toggle_audio_cd">Przełącz dźwięk</string>
+    <string name="auto">Automatycznie</string>
+    <string name="change_playback_speed_cd">Zmień prędkość odtwarzania</string>
+    <string name="location_new_album">Lokalizacja: Pamięć wewnętrzna/%1$s</string>
+    <string name="permission_manage_files_title">Zarządzanie wszystkimi plikami</string>
+    <string name="permission_manage_files_summary">"Umożliwia aplikacji tworzenie, modyfikowanie i usuwanie plików i albumów, które były wcześniej ograniczone przez system. (Obejmuje albumy spoza folderów Pictures i DCIM oraz z karty SD)"</string>
+    <string name="allow_to_manage_files">Zezwól na zarządzanie wszystkimi plikami</string>
+    <string name="vault">Vault</string>
+    <string name="tools">Tools</string>
+    <string name="library">Library</string>
+    <string name="biometric_authentication">Biometric Authentication</string>
+    <string name="unlock_your_vault">Unlock your Vault</string>
+    <string name="add_media_to_vault_cd">Add Media to Vault</string>
+    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
+    <string name="granted">Granted</string>
+    <string name="new_vault">New Vault</string>
+    <string name="delete_vault">Delete Vault</string>
+    <string name="unknown_vault">Unknown Vault</string>
+    <string name="hide">Hide</string>
+    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
+    <string name="no_ignored_albums">No ignored albums</string>
+    <string name="setup_ignored_albums">Setup ignored albums</string>
+    <string name="individual_album_selection">Individual Album Selection</string>
+    <string name="wildcard_creator">Wildcard Creator</string>
+    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
+    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
+    <string name="matched_albums">"Matched albums: %1$s"</string>
+    <string name="go_back">Go back</string>
+    <string name="continue_string">Continue</string>
+    <string name="apply">Apply</string>
+    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="setup_label_input">Label</string>
+    <string name="setup_label_placeholder">Set your label</string>
+    <string name="setup_label_title">Ignored Albums</string>
+    <string name="setup_lavel_subtitle">Create</string>
+    <string name="setup_location_title">Options</string>
+    <string name="setup_location_subtitle">Where and who’s ignored</string>
+    <string name="setup_location_location_title">Where should be ignored</string>
+    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_location_options_albums">Albums</string>
+    <string name="setup_location_options_timeline">Timeline</string>
+    <string name="setup_location_options_both">Both</string>
+    <string name="setup_location_type_title">Who should be ignored</string>
+    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
+    <string name="setup_location_types_selection">Selection</string>
+    <string name="setup_location_types_regex">Regex Pattern</string>
+    <string name="setup_type_selection_title">Selection</string>
+    <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
+    <string name="setup_type_selection_add_album">Add album</string>
+    <string name="setup_type_selection_pick_album">Pick an album</string>
+    <string name="setup_type_regex_label">Regex Pattern</string>
+    <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
+    <string name="setup_type_regex_title">Regex Pattern</string>
+    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
+    <string name="setup_type_regex_example_title">Examples</string>
+    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
+    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
+    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
+    <string name="setup_confirmation_title">Confirmation</string>
+    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
+    <string name="setup_confirmation_where">Where should be ignored</string>
+    <string name="setup_confirmation_who">Who should be ignored</string>
+    <string name="setup_confirmation_matched">Matched Albums</string>
+    <string name="albums_and_timeline">Both Albums and Timeline</string>
+    <string name="created">Created</string>
+    <string name="filter_type_date">Date</string>
+    <string name="filter_type_name">Name</string>
+    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
+    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
+    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
+    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
+    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="navigation">Navigation</string>
+    <string name="vault_setup_title">Setup your vault</string>
+    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
+    <string name="vault_setup_name">Vault Name</string>
+    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
+    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
+    <string name="ignored">Ignored</string>
+    <string name="location">Location</string>
+    <string name="update_file_name">Update file name</string>
     <plurals name="item_count">
         <item quantity="one">%s pozycja</item>
         <item quantity="few">%s pozycji</item>
