--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -28,23 +28,23 @@
     <string name="trash_delete">Удалить</string>
     <string name="share">Поделиться</string>
     <string name="remove_selected">Удалить выбранное</string>
-    <string name="remove_all">Удалить все</string>
+    <string name="remove_all">Удалить всё</string>
     <string name="empty_favorites_title">У вас нет избранных файлов</string>
-    <string name="label">Ярлык</string>
+    <string name="label">Имя файла</string>
     <string name="path">Путь</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">КБ</string>
     <string name="mb">МБ</string>
     <string name="gb">ГБ</string>
     <string name="metadata">Метаданные</string>
-    <string name="select_all">Выбрать все</string>
+    <string name="select_all">Выбрать всё</string>
     <string name="unselect_all">Отменить выбор</string>
-    <string name="drop_down_cd">Опуститься</string>
+    <string name="drop_down_cd">Опустить</string>
     <string name="back_cd">Назад</string>
-    <string name="settings_title">Параметры</string>
+    <string name="settings_title">Настройки</string>
     <string name="settings_general">Основные</string>
     <string name="settings_trash_title">Использовать корзину</string>
-    <string name="settings_trash_summary">Хранит удаленные медиафайлы в памяти на 30 дней.\nВ случае отключения, медиафайлы будут немедленно удалены навсегда.</string>
+    <string name="settings_trash_summary">Хранить удалённые медиафайлы 30 дней.\nЕсли отключить, медиафайлы будут удаляться навсегда.</string>
     <string name="move_album_to_trash">Отправить альбом в корзину</string>
     <string name="pinned_albums_title">Закреплённые альбомы</string>
     <string name="unpin">Открепить</string>
@@ -71,45 +71,45 @@
     <string name="image_add_description">Добавить описание</string>
     <string name="edit_cd">изменить</string>
     <string name="settings_theme_header">Тема</string>
-    <string name="settings_follow_system_theme_title">Системная</string>
-    <string name="settings_dark_mode_title">Использовать Тёмную тему</string>
+    <string name="settings_follow_system_theme_title">Как в системе</string>
+    <string name="settings_dark_mode_title">Использовать тёмную тему</string>
     <string name="selection_dialog_close_cd">Закрыть окно выбора</string>
     <string name="edit">Изменить</string>
     <string name="trash_deletion_warning">Перемещённые Вами в корзину фотографии и видео будут полностью удалены через 30 дней.</string>
     <string name="open_with">Открыть в</string>
     <string name="select">Выбрать</string>
-    <string name="photos_and_videos">Фото и Видео</string>
+    <string name="photos_and_videos">Фото и видео</string>
     <string name="photos">Фото</string>
     <string name="videos">Видео</string>
     <string name="photo">Фото</string>
     <string name="video">Видео</string>
     <string name="close">Закрыть</string>
-    <string name="manage_media_title">Разрешите Галерее управлять Вашими медиафайлами</string>
-    <string name="manage_media_summary">Эта опция пропускает дополнительные диалоги подтверждения при выполнении различных действий, например добавления в избранные.</string>
+    <string name="manage_media_title">Разрешите Галерее управлять вашими медиафайлами</string>
+    <string name="manage_media_summary">Эта опция пропускает дополнительные диалоговые окна о необходимости подтверждения при выполнении различных действий. Например, при добавлении в избранное.</string>
     <string name="skip">Пропустить</string>
     <string name="allow">Разрешить</string>
     <string name="all">Все</string>
-    <string name="secure_mode_title">Безопасный Режим</string>
+    <string name="secure_mode_title">Безопасный режим</string>
     <string name="secure_mode_summary">Скрывает содержимое при выходе</string>
-    <string name="rotate_screen_cd">Повернуть Экран</string>
+    <string name="rotate_screen_cd">Повернуть экран</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Поменять Размер Альбомных Карточек</string>
+    <string name="change_album_size">Поменять размер альбомных карточек</string>
     <string name="reset">Сбросить</string>
     <string name="customization">Персонализация</string>
-    <string name="album_card_size_title">Размер Альбомных Карточек</string>
+    <string name="album_card_size_title">Размер альбомных карточек</string>
     <string name="album_card_size_summary">Самостоятельно выбрать размер альбомных карточек</string>
     <string name="set_wallpaper">Обои</string>
     <string name="set_wallpaper_error">Невозможно установить обои, приложение недоступно!</string>
     <string name="monthly_timeline_title">Группировка по месяцу</string>
     <string name="monthly_timeline_summary">Группирует фотографии по месяцу, а не по дате (Перезапускает приложение)</string>
-    <string name="amoled_mode_title">Режим Amoled</string>
+    <string name="amoled_mode_title">Использовать чёрную тему</string>
     <string name="amoled_mode_summary">Больше контраста, лучше всего подходит для Amoled экранов</string>
     <string name="location_chip">Местоположение: %s</string>
-    <string name="media_details">Детали</string>
-    <string name="album_card_size">Размер Альбомных Карточек</string>
+    <string name="media_details">Сведения</string>
+    <string name="album_card_size">Размер альбомных карточек</string>
     <string name="edit_metadata">Редактировать метаданные</string>
     <string name="dialog_to_trash">Перемещение в Корзину</string>
-    <string name="dialog_delete">Безвозвратное Удаление</string>
+    <string name="dialog_delete">Безвозвратное удаление</string>
     <string name="s_items">%1$s элементов</string>
     <string name="trashing_items">Перемещение в корзину %1$s элементов...</string>
     <string name="deleting_items">Удаление %1$s элементов...</string>
@@ -120,8 +120,8 @@
     <string name="trash_incompatible_summary">Эти элементы будут удалены безвозвратно.</string>
     <string name="error_toast">Произошла ошибка!</string>
     <string name="beta">Бета</string>
-    <string name="remove_metadata">Удалить Метаданные</string>
-    <string name="remove_location">Удалить Местоположение</string>
+    <string name="remove_metadata">Удалить метаданные</string>
+    <string name="remove_location">Удалить местоположение</string>
     <string name="description">Описание</string>
     <string name="move_to_another_album">Переместить в другой альбом</string>
     <string name="move">Переместить</string>
@@ -131,7 +131,7 @@
     <string name="setup_summary">Для доступа к вашим медиафайлам необходимо предоставить следующие разрешения:</string>
     <string name="required">Необходимое</string>
     <string name="optional">Необязательное</string>
-    <string name="permission_manage_media_title">- Управление медиа</string>
+    <string name="permission_manage_media_title">Управление медиа</string>
     <string name="permission_manage_media_summary">"Автоматически выдает системные диалоги подтверждения, когда вы запрашиваете несколько изменений в медиафайлах (переключение избранного, управление корзиной, редактирование метаданных и т. д.)"</string>
     <string name="read_media_images">Чтение изображений</string>
     <string name="read_media_images_summary">Позволяет приложению отображать ваши изображения</string>
@@ -159,7 +159,106 @@
     <string name="add_to_ignored_summary">Убрать альбом из отображения в Галерее</string>
     <string name="remove_from_ignored">Удалить из списка игнорируемых</string>
     <string name="remove_from_ignored_summary">Удалите из списка игнорируемых альбом с названием %1$s</string>
-    <string name="favorite">Favorite</string>
+    <string name="override">Переопределение</string>
+    <string name="save_copy">Сохранить копию</string>
+    <string name="favorite">В избранное</string>
+    <string name="allow_to_manage_media">Разрешить управлять медиафайлами</string>
+    <string name="set_default_launch_screen">Установить экран запуска по умолчанию</string>
+    <string name="use_last_opened_screen">Использовать последний открытый экран</string>
+    <string name="timeline">Хронология</string>
+    <string name="albums">Альбомы</string>
+    <string name="launch_on_timeline">Запуск хронологии</string>
+    <string name="launch_on_albums">Запуск альбомов</string>
+    <string name="launch_auto">Запустить последний экран, когда приложение было закрыто</string>
+    <string name="set_default_screen">Установить экран по умолчанию</string>
+    <string name="done">Готово</string>
+    <string name="toggle_audio_cd">Переключение звука</string>
+    <string name="auto">Авто</string>
+    <string name="change_playback_speed_cd">Изменение скорости воспроизведения</string>
+    <string name="location_new_album">Расположение: Внутреннее хранилище/%1$s</string>
+    <string name="permission_manage_files_title">Manage All Files</string>
+    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
+    <string name="allow_to_manage_files">Разрешить управлять всеми файлами</string>
+    <string name="vault">Vault</string>
+    <string name="tools">Tools</string>
+    <string name="library">Library</string>
+    <string name="biometric_authentication">Biometric Authentication</string>
+    <string name="unlock_your_vault">Unlock your Vault</string>
+    <string name="add_media_to_vault_cd">Add Media to Vault</string>
+    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
+    <string name="granted">Granted</string>
+    <string name="new_vault">New Vault</string>
+    <string name="delete_vault">Delete Vault</string>
+    <string name="unknown_vault">Unknown Vault</string>
+    <string name="hide">Hide</string>
+    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
+    <string name="no_ignored_albums">No ignored albums</string>
+    <string name="setup_ignored_albums">Setup ignored albums</string>
+    <string name="individual_album_selection">Individual Album Selection</string>
+    <string name="wildcard_creator">Wildcard Creator</string>
+    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
+    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
+    <string name="matched_albums">"Matched albums: %1$s"</string>
+    <string name="go_back">Go back</string>
+    <string name="continue_string">Continue</string>
+    <string name="apply">Apply</string>
+    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="setup_label_input">Label</string>
+    <string name="setup_label_placeholder">Set your label</string>
+    <string name="setup_label_title">Ignored Albums</string>
+    <string name="setup_lavel_subtitle">Create</string>
+    <string name="setup_location_title">Options</string>
+    <string name="setup_location_subtitle">Where and who’s ignored</string>
+    <string name="setup_location_location_title">Where should be ignored</string>
+    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_location_options_albums">Albums</string>
+    <string name="setup_location_options_timeline">Timeline</string>
+    <string name="setup_location_options_both">Both</string>
+    <string name="setup_location_type_title">Who should be ignored</string>
+    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
+    <string name="setup_location_types_selection">Selection</string>
+    <string name="setup_location_types_regex">Regex Pattern</string>
+    <string name="setup_type_selection_title">Selection</string>
+    <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
+    <string name="setup_type_selection_add_album">Add album</string>
+    <string name="setup_type_selection_pick_album">Pick an album</string>
+    <string name="setup_type_regex_label">Regex Pattern</string>
+    <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
+    <string name="setup_type_regex_title">Regex Pattern</string>
+    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
+    <string name="setup_type_regex_example_title">Examples</string>
+    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
+    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
+    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
+    <string name="setup_confirmation_title">Confirmation</string>
+    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
+    <string name="setup_confirmation_where">Where should be ignored</string>
+    <string name="setup_confirmation_who">Who should be ignored</string>
+    <string name="setup_confirmation_matched">Matched Albums</string>
+    <string name="albums_and_timeline">Both Albums and Timeline</string>
+    <string name="created">Created</string>
+    <string name="filter_type_date">Date</string>
+    <string name="filter_type_name">Name</string>
+    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
+    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
+    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
+    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
+    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="navigation">Navigation</string>
+    <string name="vault_setup_title">Setup your vault</string>
+    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
+    <string name="vault_setup_name">Vault Name</string>
+    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
+    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
+    <string name="ignored">Ignored</string>
+    <string name="location">Location</string>
+    <string name="update_file_name">Update file name</string>
     <plurals name="item_count">
         <item quantity="one">%s пункт</item>
         <item quantity="few">%s пунктов</item>
