--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -156,10 +156,109 @@
     <string name="select_an_album">Album auswählen</string>
     <string name="blacklist_summary">Alben in der Galerie verstecken</string>
     <string name="add_to_ignored">Zu ignorierten Alben hinzufügen</string>
-    <string name="add_to_ignored_summary">Ein Album in der Galerie nicht mehr anzeigen</string>
+    <string name="add_to_ignored_summary">Ein Album nicht mehr in der Galerie anzeigen</string>
     <string name="remove_from_ignored">Aus der Ignorierliste entfernen</string>
     <string name="remove_from_ignored_summary">Album %1$s aus der Ignorierliste entfernen</string>
-    <string name="favorite">Favoriten</string>
+    <string name="override">Überschreiben</string>
+    <string name="save_copy">Kopie speichern</string>
+    <string name="favorite">Favorit</string>
+    <string name="allow_to_manage_media">Erlauben, Medien zu verwalten</string>
+    <string name="set_default_launch_screen">Startbildschirm auswählen</string>
+    <string name="use_last_opened_screen">Zuletzt geöffneter Bildschirm</string>
+    <string name="timeline">Zeitleiste</string>
+    <string name="albums">Alben</string>
+    <string name="launch_on_timeline">Zeitleiste öffnen</string>
+    <string name="launch_on_albums">Alben öffnen</string>
+    <string name="launch_auto">Bildschirm, der beim Schließen der App zuletzt geöffnet war</string>
+    <string name="set_default_screen">Standard-Bildschirm auswählen</string>
+    <string name="done">Fertig</string>
+    <string name="toggle_audio_cd">Audio umschalten</string>
+    <string name="auto">Auto</string>
+    <string name="change_playback_speed_cd">Ändere Wiedergabegeschwindigkeit</string>
+    <string name="location_new_album">Standort: interner Speicher/%1$s</string>
+    <string name="permission_manage_files_title">Verwalte alle Dateien</string>
+    <string name="permission_manage_files_summary">"Erlaubt der App Dateien und Alben zu erstellen, bearbeiten und zu löschen welche zuvor vom System eingeschränkt waren. (Beinhaltet Alben außerhalb der Bilder und DCIM Ordner und die auf der SD-Karte)"</string>
+    <string name="allow_to_manage_files">Verwalten aller Dateien zulassen</string>
+    <string name="vault">Tresor</string>
+    <string name="tools">Werkzeug</string>
+    <string name="library">Bibliothek</string>
+    <string name="biometric_authentication">Biometrische Authentifizierung</string>
+    <string name="unlock_your_vault">Entsperre deinen Tresor</string>
+    <string name="add_media_to_vault_cd">Medien zum Tresor hinzufügen</string>
+    <string name="vault_exists">Tresor %1$s (%2$s) existiert</string>
+    <string name="granted">Gewährt</string>
+    <string name="new_vault">Neuer Tresor</string>
+    <string name="delete_vault">Tresor löschen</string>
+    <string name="unknown_vault">Unbekannter Tresor</string>
+    <string name="hide">Verbergen</string>
+    <string name="ignored_albums_text">Auswählen, welche Alben in der Haupt-Zeitleiste, in der Registerkarte Alben oder in beiden nicht sichtbar sind.\n\nSie können entweder einzelne Alben auswählen oder ein Suchmuster erstellen, um automatisch alle Alben auszublenden, die diesem Muster entsprechen.</string>
+    <string name="no_ignored_albums">Keine ignorierten Alben</string>
+    <string name="setup_ignored_albums">Ignorierte Alben einrichten</string>
+    <string name="individual_album_selection">Individuelle Albumauswahl</string>
+    <string name="wildcard_creator">Suchmuster Ersteller</string>
+    <string name="wildcard_summary">Das Suchmuster wird verwendet, um Albumnamen oder deren Pfade abzugleichen.\nDas Suchmuster kann wie ein Regex Muster behandelt werden.</string>
+    <string name="wildcard_summary_first">Suchmuster: %1$s\nÜbereinstimmende Alben: %2$s</string>
+    <string name="matched_albums">"Übereinstimmende Alben: %1$s"</string>
+    <string name="go_back">Zurück</string>
+    <string name="continue_string">Weiter</string>
+    <string name="apply">Anwenden</string>
+    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="setup_label_input">Label</string>
+    <string name="setup_label_placeholder">Set your label</string>
+    <string name="setup_label_title">Ignorierte Alben</string>
+    <string name="setup_lavel_subtitle">Erstellen</string>
+    <string name="setup_location_title">Einstellungen</string>
+    <string name="setup_location_subtitle">Wo und wer ignoriert wird</string>
+    <string name="setup_location_location_title">Wo sollte ignoriert werden</string>
+    <string name="setup_location_location_subtitle">Das Album und sein Inhalt werden ausgeblendet, je nachdem, wo der Speicherort eingestellt ist</string>
+    <string name="setup_location_options_albums">Alben</string>
+    <string name="setup_location_options_timeline">Zeitleiste</string>
+    <string name="setup_location_options_both">Beide</string>
+    <string name="setup_location_type_title">Wer ignoriert werden sollte</string>
+    <string name="setup_location_type_subtitle">Entweder ein einzelnes Album auswählen oder ein Regex Muster erstellen, das mit mehreren übereinstimmt</string>
+    <string name="setup_location_types_selection">Auswahl</string>
+    <string name="setup_location_types_regex">Regex Muster</string>
+    <string name="setup_type_selection_title">Auswahl</string>
+    <string name="setup_type_selection_subtitle">Wähle das zu ignorierende Album</string>
+    <string name="setup_type_selection_add_album">Album hinzufügen</string>
+    <string name="setup_type_selection_pick_album">Album wählen</string>
+    <string name="setup_type_regex_label">Regex Muster</string>
+    <string name="setup_type_regex_summary">Alben automatisch Ignorieren, indem ein reguläres Ausdrucksmuster(Regex) verwendet wird.\n\nBevor Sie fortfahren, muss Ihr Muster gültig sein.</string>
+    <string name="setup_type_regex_title">Regex Muster</string>
+    <string name="setup_type_regex_subtitle">Erstellen Sie ein Auswahlmuster</string>
+    <string name="setup_type_regex_example_title">Beispiele</string>
+    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
+    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
+    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
+    <string name="setup_confirmation_title">Confirmation</string>
+    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
+    <string name="setup_confirmation_where">Where should be ignored</string>
+    <string name="setup_confirmation_who">Who should be ignored</string>
+    <string name="setup_confirmation_matched">Matched Albums</string>
+    <string name="albums_and_timeline">Both Albums and Timeline</string>
+    <string name="created">Created</string>
+    <string name="filter_type_date">Date</string>
+    <string name="filter_type_name">Name</string>
+    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
+    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
+    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
+    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
+    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="navigation">Navigation</string>
+    <string name="vault_setup_title">Setup your vault</string>
+    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
+    <string name="vault_setup_name">Vault Name</string>
+    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
+    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
+    <string name="ignored">Ignored</string>
+    <string name="location">Location</string>
+    <string name="update_file_name">Update file name</string>
     <plurals name="item_count">
         <item quantity="one">%s Datei</item>
         <item quantity="other">%s Dateien</item>
