--- a/app/src/main/res/values-no-rNO/strings.xml
+++ b/app/src/main/res/values-no-rNO/strings.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
+    <string name="app_name">Galleri</string>
+    <string name="nav_albums">Album</string>
+    <string name="searchbar_title"><![CDATA[Søk etter bilder & videoer]]></string>
+    <string name="header_today">I dag</string>
+    <string name="header_yesterday">I går</string>
     <string name="request_permissions">Request permissions</string>
     <string name="filter">Filter</string>
     <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
+    <string name="filter_nameAZ">Navn (A-Å)</string>
+    <string name="filter_nameZA">Navn (Å-A)</string>
     <string name="filter_old">Old</string>
     <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
+    <string name="trash">Papirkurv</string>
     <string name="pause_video">Pause video</string>
     <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
+    <string name="favorites">Favoritter</string>
     <string name="no_media_title">Seems empty here</string>
     <string name="no_media_cd">No media found</string>
     <string name="empty_trash_title">Squeaky Clean</string>
     <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
+    <string name="error_title">Noe gikk galt :(</string>
     <string name="error_cd">An error occurred</string>
     <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
+    <string name="trash_restore">Gjenopprett</string>
     <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
+    <string name="trash_delete">Slett</string>
+    <string name="share">Del</string>
     <string name="remove_selected">Remove selected</string>
     <string name="remove_all">Remove all</string>
     <string name="empty_favorites_title">You have no favorites</string>
@@ -37,19 +37,19 @@
     <string name="mb">MB</string>
     <string name="gb">GB</string>
     <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
+    <string name="select_all">Velg alle</string>
     <string name="unselect_all">Unselect all</string>
     <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="settings_general">General</string>
+    <string name="back_cd">Tilbake</string>
+    <string name="settings_title">Innstillinger</string>
+    <string name="settings_general">Generelt</string>
     <string name="settings_trash_title">Use trash can</string>
     <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
+    <string name="move_album_to_trash">Flytt album til papirkurven</string>
+    <string name="pinned_albums_title">Festede album</string>
+    <string name="unpin">Løsne</string>
+    <string name="pin">Fest</string>
+    <string name="nav_timeline">Tidslinje</string>
     <string name="location_cd">Media Location</string>
     <string name="location_map_cd">Location Map</string>
     <string name="app_dev">by %s</string>
@@ -76,22 +76,22 @@
     <string name="selection_dialog_close_cd">Close selection dialog</string>
     <string name="edit">Edit</string>
     <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
-    <string name="open_with">Open with</string>
-    <string name="select">Select</string>
-    <string name="photos_and_videos">Photos and Videos</string>
-    <string name="photos">Photos</string>
-    <string name="videos">Videos</string>
-    <string name="photo">Photo</string>
+    <string name="open_with">Åpne med</string>
+    <string name="select">Velg</string>
+    <string name="photos_and_videos">Bilder og videoer</string>
+    <string name="photos">Bilder</string>
+    <string name="videos">Videoer</string>
+    <string name="photo">Bilde</string>
     <string name="video">Video</string>
-    <string name="close">Close</string>
+    <string name="close">Lukk</string>
     <string name="manage_media_title">Allow Gallery to Manage your Media</string>
     <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
+    <string name="skip">Hopp over</string>
+    <string name="allow">Tilllat</string>
+    <string name="all">Alle</string>
+    <string name="secure_mode_title">Sikker modus</string>
     <string name="secure_mode_summary">Hide the app preview when you exit it</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="rotate_screen_cd">Roter skjermen</string>
     <string name="size_dp">%1$sdp</string>
     <string name="change_album_size">Change Album Card Size</string>
     <string name="reset">Reset</string>
@@ -159,7 +159,106 @@
     <string name="add_to_ignored_summary">Remove an album from showing inside the Gallery</string>
     <string name="remove_from_ignored">Remove from ignored list</string>
     <string name="remove_from_ignored_summary">Remove from the ignored list the album named %1$s</string>
+    <string name="override">Override</string>
+    <string name="save_copy">Save Copy</string>
     <string name="favorite">Favorite</string>
+    <string name="allow_to_manage_media">Allow to Manage Media</string>
+    <string name="set_default_launch_screen">Set default launch screen</string>
+    <string name="use_last_opened_screen">Use last opened screen</string>
+    <string name="timeline">Timeline</string>
+    <string name="albums">Albums</string>
+    <string name="launch_on_timeline">Launch on Timeline</string>
+    <string name="launch_on_albums">Launch on Albums</string>
+    <string name="launch_auto">Launch last screen when the app was closed</string>
+    <string name="set_default_screen">Set default screen</string>
+    <string name="done">Done</string>
+    <string name="toggle_audio_cd">Toggle audio</string>
+    <string name="auto">Auto</string>
+    <string name="change_playback_speed_cd">Change playback speed</string>
+    <string name="location_new_album">Location: Internal-Storage/%1$s</string>
+    <string name="permission_manage_files_title">Manage All Files</string>
+    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
+    <string name="allow_to_manage_files">Allow to Manage All Files</string>
+    <string name="vault">Vault</string>
+    <string name="tools">Tools</string>
+    <string name="library">Library</string>
+    <string name="biometric_authentication">Biometric Authentication</string>
+    <string name="unlock_your_vault">Unlock your Vault</string>
+    <string name="add_media_to_vault_cd">Add Media to Vault</string>
+    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
+    <string name="granted">Granted</string>
+    <string name="new_vault">New Vault</string>
+    <string name="delete_vault">Delete Vault</string>
+    <string name="unknown_vault">Unknown Vault</string>
+    <string name="hide">Hide</string>
+    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
+    <string name="no_ignored_albums">No ignored albums</string>
+    <string name="setup_ignored_albums">Setup ignored albums</string>
+    <string name="individual_album_selection">Individual Album Selection</string>
+    <string name="wildcard_creator">Wildcard Creator</string>
+    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
+    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
+    <string name="matched_albums">"Matched albums: %1$s"</string>
+    <string name="go_back">Go back</string>
+    <string name="continue_string">Continue</string>
+    <string name="apply">Apply</string>
+    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="setup_label_input">Label</string>
+    <string name="setup_label_placeholder">Set your label</string>
+    <string name="setup_label_title">Ignored Albums</string>
+    <string name="setup_lavel_subtitle">Create</string>
+    <string name="setup_location_title">Options</string>
+    <string name="setup_location_subtitle">Where and who’s ignored</string>
+    <string name="setup_location_location_title">Where should be ignored</string>
+    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_location_options_albums">Albums</string>
+    <string name="setup_location_options_timeline">Timeline</string>
+    <string name="setup_location_options_both">Both</string>
+    <string name="setup_location_type_title">Who should be ignored</string>
+    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
+    <string name="setup_location_types_selection">Selection</string>
+    <string name="setup_location_types_regex">Regex Pattern</string>
+    <string name="setup_type_selection_title">Selection</string>
+    <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
+    <string name="setup_type_selection_add_album">Add album</string>
+    <string name="setup_type_selection_pick_album">Pick an album</string>
+    <string name="setup_type_regex_label">Regex Pattern</string>
+    <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
+    <string name="setup_type_regex_title">Regex Pattern</string>
+    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
+    <string name="setup_type_regex_example_title">Examples</string>
+    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
+    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
+    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
+    <string name="setup_confirmation_title">Confirmation</string>
+    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
+    <string name="setup_confirmation_where">Where should be ignored</string>
+    <string name="setup_confirmation_who">Who should be ignored</string>
+    <string name="setup_confirmation_matched">Matched Albums</string>
+    <string name="albums_and_timeline">Both Albums and Timeline</string>
+    <string name="created">Created</string>
+    <string name="filter_type_date">Date</string>
+    <string name="filter_type_name">Name</string>
+    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
+    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
+    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
+    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
+    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="navigation">Navigation</string>
+    <string name="vault_setup_title">Setup your vault</string>
+    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
+    <string name="vault_setup_name">Vault Name</string>
+    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
+    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
+    <string name="ignored">Ignored</string>
+    <string name="location">Location</string>
+    <string name="update_file_name">Update file name</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
