--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">图库</string>
-    <string name="nav_albums">相册</string>
+    <string name="nav_albums">专辑</string>
     <string name="searchbar_title"><![CDATA[搜索图片和视频]]></string>
     <string name="header_today">今天</string>
     <string name="header_yesterday">昨天</string>
@@ -102,64 +102,163 @@
     <string name="set_wallpaper_error">没有可用的应用，无法设置壁纸！</string>
     <string name="monthly_timeline_title">月度时间线</string>
     <string name="monthly_timeline_summary">按月而非具体日期来进行时间线分组（需要重启应用）</string>
-    <string name="amoled_mode_title">Use Amoled Mode</string>
-    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
-    <string name="location_chip">Location: %s</string>
-    <string name="media_details">Details</string>
-    <string name="album_card_size">Album Card Size</string>
-    <string name="edit_metadata">Edit Metadata</string>
-    <string name="dialog_to_trash">Moving to Trash</string>
-    <string name="dialog_delete">Deleting Permanently</string>
-    <string name="s_items">%1$s items</string>
-    <string name="trashing_items">Trashing %1$s items..</string>
-    <string name="deleting_items">Deleting %1$s items...</string>
-    <string name="long_press_to_remove">Long press to remove</string>
-    <string name="dialog_from_trash">Restoring from Trash</string>
-    <string name="restoring_items">Restoring %1$s items..</string>
-    <string name="trash_incompatible_title">Some items cannot be trashed!</string>
-    <string name="trash_incompatible_summary">Such items will be deleted permanently instead.</string>
-    <string name="error_toast">An error occurred!</string>
+    <string name="amoled_mode_title">使用 AMOLED 模式</string>
+    <string name="amoled_mode_summary">增强对比度，适合 AMOLED 屏幕</string>
+    <string name="location_chip">位置：%s</string>
+    <string name="media_details">详细信息</string>
+    <string name="album_card_size">相册卡片大小</string>
+    <string name="edit_metadata">编辑元数据</string>
+    <string name="dialog_to_trash">移至回收站</string>
+    <string name="dialog_delete">永久删除</string>
+    <string name="s_items">%1$s 个项目</string>
+    <string name="trashing_items">正在回收 %1$s 个项目..</string>
+    <string name="deleting_items">正在删除 %1$s 个项目..</string>
+    <string name="long_press_to_remove">长按移除</string>
+    <string name="dialog_from_trash">从回收站中恢复</string>
+    <string name="restoring_items">正在恢复 %1$s 个项目..</string>
+    <string name="trash_incompatible_title">部分项目无法移至回收站</string>
+    <string name="trash_incompatible_summary">这些项目将被永久删除。</string>
+    <string name="error_toast">出现错误</string>
     <string name="beta">Beta</string>
-    <string name="remove_metadata">Remove Metadata</string>
-    <string name="remove_location">Remove Location</string>
-    <string name="description">Description</string>
-    <string name="move_to_another_album">Move to another album</string>
-    <string name="move">Move</string>
-    <string name="some_permissions_are_not_granted">Some permissions are not granted!</string>
-    <string name="get_started">Get Started</string>
-    <string name="welcome">Welcome</string>
-    <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
-    <string name="required">Required</string>
-    <string name="optional">Optional</string>
-    <string name="permission_manage_media_title">Manage Media</string>
-    <string name="permission_manage_media_summary">"Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
-    <string name="read_media_images">Read Media Images</string>
-    <string name="read_media_images_summary">Allows the app to show your images</string>
-    <string name="read_media_videos">Read Media Videos</string>
-    <string name="read_media_videos_summary">Allows the app to show your videos</string>
-    <string name="access_media_location">Access Media Location</string>
-    <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
-    <string name="internet">Internet</string>
-    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
-    <string name="fancy_blur">Fancy Blur</string>
-    <string name="fancy_blur_summary">Blur background in Media View</string>
-    <string name="old_navbar">Use Material Navigation</string>
-    <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
-    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
-    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
-    <string name="allow_vibrations">Allow vibrations</string>
-    <string name="allow_vibrations_summary">Allow sending feedback as vibrations while performing some actions or gestures</string>
-    <string name="album_name">Album Name</string>
-    <string name="create_new_album">Create new album</string>
-    <string name="copy">Copy</string>
-    <string name="ignored_albums">Ignored Albums</string>
-    <string name="select_an_album">Select an album</string>
-    <string name="blacklist_summary">Ignore albums from Gallery</string>
-    <string name="add_to_ignored">Add to ignored albums</string>
-    <string name="add_to_ignored_summary">Remove an album from showing inside the Gallery</string>
-    <string name="remove_from_ignored">Remove from ignored list</string>
-    <string name="remove_from_ignored_summary">Remove from the ignored list the album named %1$s</string>
-    <string name="favorite">Favorite</string>
+    <string name="remove_metadata">移除元数据</string>
+    <string name="remove_location">移除位置</string>
+    <string name="description">描述</string>
+    <string name="move_to_another_album">移至另一个相册</string>
+    <string name="move">移动</string>
+    <string name="some_permissions_are_not_granted">某些权限未授予</string>
+    <string name="get_started">开始</string>
+    <string name="welcome">欢迎使用</string>
+    <string name="setup_summary">为了访问您的媒体，需要授予以下权限：</string>
+    <string name="required">必需</string>
+    <string name="optional">可选</string>
+    <string name="permission_manage_media_title">管理媒体</string>
+    <string name="permission_manage_media_summary">"当你要求对媒体进行多项更改时（切换收藏、管理垃圾箱、编辑元数据等），系统会自动发出确认对话框。"</string>
+    <string name="read_media_images">阅读媒体图片</string>
+    <string name="read_media_images_summary">允许应用程序显示您的图像</string>
+    <string name="read_media_videos">浏览媒体视频</string>
+    <string name="read_media_videos_summary">允许应用程序显示您的视频</string>
+    <string name="access_media_location">访问媒体位置</string>
+    <string name="access_media_location_summary"><![CDATA[允许应用程序读取图像和视频的位置数据]]></string>
+    <string name="internet">互联网</string>
+    <string name="internet_summary"><![CDATA[需要显示图像和视频的位置预览]]></string>
+    <string name="fancy_blur">精细背景模糊</string>
+    <string name="fancy_blur_summary">模糊媒体视图中的背景</string>
+    <string name="old_navbar">使用 Material 导航栏</string>
+    <string name="old_navbar_summary">显示旧版导航栏（在大屏幕上显示为侧边栏）</string>
+    <string name="hide_timeline_for_albums">隐藏相册的时间轴</string>
+    <string name="hide_timeline_for_album_summary">打开相册时隐藏日期标题</string>
+    <string name="allow_vibrations">允许振动</string>
+    <string name="allow_vibrations_summary">在执行某些操作或手势时，允许以振动形式发送反馈信息</string>
+    <string name="album_name">相册名称</string>
+    <string name="create_new_album">创建新相册</string>
+    <string name="copy">复制</string>
+    <string name="ignored_albums">隐藏的相册</string>
+    <string name="select_an_album">选择相册</string>
+    <string name="blacklist_summary">隐藏图库中的相册</string>
+    <string name="add_to_ignored">添加到隐藏的相册</string>
+    <string name="add_to_ignored_summary">隐藏相册，使其不在图库中显示</string>
+    <string name="remove_from_ignored">取消隐藏</string>
+    <string name="remove_from_ignored_summary">取消隐藏相册 %1$s</string>
+    <string name="override">覆盖</string>
+    <string name="save_copy">保存副本</string>
+    <string name="favorite">收藏</string>
+    <string name="allow_to_manage_media">允许管理媒体</string>
+    <string name="set_default_launch_screen">设置默认启动页面</string>
+    <string name="use_last_opened_screen">使用上次打开的页面</string>
+    <string name="timeline">时间轴</string>
+    <string name="albums">相册</string>
+    <string name="launch_on_timeline">启动时打开时间轴页面</string>
+    <string name="launch_on_albums">启动时打开相册页面</string>
+    <string name="launch_auto">启动时打开上次应用关闭时的页面</string>
+    <string name="set_default_screen">设置默认屏幕</string>
+    <string name="done">完成</string>
+    <string name="toggle_audio_cd">切换音频</string>
+    <string name="auto">自动</string>
+    <string name="change_playback_speed_cd">改变播放速度</string>
+    <string name="location_new_album">位置：内部存储/%1$s</string>
+    <string name="permission_manage_files_title">管理所有文件</string>
+    <string name="permission_manage_files_summary">"允许应用程序创建、修改和删除之前受系统限制的文件和相册。(包括图片和 DCIM 文件夹以外的相册以及 SD 卡中的相册"</string>
+    <string name="allow_to_manage_files">允许管理所有文件</string>
+    <string name="vault">Vault</string>
+    <string name="tools">Tools</string>
+    <string name="library">Library</string>
+    <string name="biometric_authentication">Biometric Authentication</string>
+    <string name="unlock_your_vault">Unlock your Vault</string>
+    <string name="add_media_to_vault_cd">Add Media to Vault</string>
+    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
+    <string name="granted">Granted</string>
+    <string name="new_vault">New Vault</string>
+    <string name="delete_vault">Delete Vault</string>
+    <string name="unknown_vault">Unknown Vault</string>
+    <string name="hide">Hide</string>
+    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
+    <string name="no_ignored_albums">No ignored albums</string>
+    <string name="setup_ignored_albums">Setup ignored albums</string>
+    <string name="individual_album_selection">Individual Album Selection</string>
+    <string name="wildcard_creator">Wildcard Creator</string>
+    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
+    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
+    <string name="matched_albums">"Matched albums: %1$s"</string>
+    <string name="go_back">Go back</string>
+    <string name="continue_string">Continue</string>
+    <string name="apply">Apply</string>
+    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="setup_label_input">Label</string>
+    <string name="setup_label_placeholder">Set your label</string>
+    <string name="setup_label_title">Ignored Albums</string>
+    <string name="setup_lavel_subtitle">Create</string>
+    <string name="setup_location_title">Options</string>
+    <string name="setup_location_subtitle">Where and who’s ignored</string>
+    <string name="setup_location_location_title">Where should be ignored</string>
+    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_location_options_albums">Albums</string>
+    <string name="setup_location_options_timeline">Timeline</string>
+    <string name="setup_location_options_both">Both</string>
+    <string name="setup_location_type_title">Who should be ignored</string>
+    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
+    <string name="setup_location_types_selection">Selection</string>
+    <string name="setup_location_types_regex">Regex Pattern</string>
+    <string name="setup_type_selection_title">Selection</string>
+    <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
+    <string name="setup_type_selection_add_album">Add album</string>
+    <string name="setup_type_selection_pick_album">Pick an album</string>
+    <string name="setup_type_regex_label">Regex Pattern</string>
+    <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
+    <string name="setup_type_regex_title">Regex Pattern</string>
+    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
+    <string name="setup_type_regex_example_title">Examples</string>
+    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
+    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
+    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
+    <string name="setup_confirmation_title">Confirmation</string>
+    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
+    <string name="setup_confirmation_where">Where should be ignored</string>
+    <string name="setup_confirmation_who">Who should be ignored</string>
+    <string name="setup_confirmation_matched">Matched Albums</string>
+    <string name="albums_and_timeline">Both Albums and Timeline</string>
+    <string name="created">Created</string>
+    <string name="filter_type_date">Date</string>
+    <string name="filter_type_name">Name</string>
+    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
+    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
+    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
+    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
+    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="navigation">Navigation</string>
+    <string name="vault_setup_title">Setup your vault</string>
+    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
+    <string name="vault_setup_name">Vault Name</string>
+    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
+    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
+    <string name="ignored">Ignored</string>
+    <string name="location">Location</string>
+    <string name="update_file_name">Update file name</string>
     <plurals name="item_count">
         <item quantity="other">%s 个项目</item>
     </plurals>
